# AiPL

./: .gitignore  .gitmodules  APL-Eigen CEK Machine Implementation Task List.md  APL-Eigen CEK Machine.md  CMakeLists.txt  Click-Informed Projective Dynamics Optimization Framework.md  FINAL_TASK_LIST_UPDATE.md  GC_DESIGN.md  ISO-13751 Impact Analysis.md  ISO-13751-operator-semantics.md  Phase 3 Final Task List.md  Phase 3 Implementation Plan.md  README.md  RECOVERY_PLAN.md  REFACTORING-TASK-LIST.md  TASK_LIST_CHANGELOG.md  Task List Updates Required.md  The APL CEK Machine: A Unified Model of Parsing and Evaluation.md  The Pratt CEK Machine.md  Two-Phase Unified Projective Optimization Framework.md
include/: completion.h  continuation.h  control.h  dir.h  environment.h  heap.h  kont_print.h  lexer.h  lexer_arena.h  machine.h  operators.h  optimizer.h  parser.h  primitives.h  string_pool.h  sysvar.h  token.h  value.h
src/: bench_optimizer.cpp  completion.cpp  continuation.cpp  control.cpp  dir.cpp  environment.cpp  heap.cpp  lexer.re  machine.cpp  main.cpp  operators.cpp  optimizer.cpp  parser.cpp  primitives.cpp  sysvar.cpp  token.cpp  value.cpp
tests/: CMakeLists.txt  test_common.h  test_completion.cpp  test_continuation.cpp  test_dfn.cpp  test_dir.cpp  test_error.cpp  test_eval.cpp  test_grammar.cpp  test_heap.cpp  test_lexer.cpp  test_machine.cpp  test_operators.cpp  test_optimizer.cpp  test_parser.cpp  test_prim_arithmetic.cpp  test_prim_format.cpp  test_prim_structural.cpp  test_primitives.cpp  test_sanity.cpp  test_statements.cpp  test_strings.cpp  test_sysfn.cpp  test_value.cpp
